# MultiColAndreas

./: CMakeLists.txt  pawn.json  readme.md
Server/include/: colandreas.inc
WizardApp/: CMakeLists.txt
WizardApp/include/: BuildManager.h  ImgManager.hpp  Main.hpp  vehicleNames.h
WizardApp/src/: BuildManager.cpp  ImgManager.cpp  Main.cpp  QtMainWindow.cpp  vehicleNames.cpp
WizardApp/ui/: License.ui  Settings.ui  ui_License.h  ui_MainWindow.h  ui_Settings.h  ui_Working.h
src/: API.cpp  API.h  ColAndreas.cpp  ColAndreas.def  ColAndreas.h  ColAndreasDatabaseReader.cpp  ColAndreasDatabaseReader.h  ColObject.cpp  ColObject.h  DynamicWorld.cpp  DynamicWorld.h  Entity.cpp  Entity.h  LodArray.h  Natives.cpp  Natives.h  NetGame.cpp  NetGame.h  WaterArray.h
src/SDK/: amxplugin.cpp
src/SDK/amx/: amx.h
